Added hide-hours functionality

--- a/demo/index.html
+++ b/demo/index.html
@@ -72,6 +72,10 @@
     <h2>Countdown </h2>
     <code>&lt;flip-clock display-mode=&quot;countdown&quot; start-from=&quot;20&quot; show-buttons&gt;&lt;/flip-clock&gt;</code>
     <flip-clock display-mode="countdown" start-from="20" show-buttons></flip-clock>
+
+    <h2>Countdown without hours</h2>
+    <code>&lt;flip-clock display-mode=&quot;countdown&quot; start-from=&quot;20&quot; show-buttons hide-hours&gt;&lt;/flip-clock&gt;</code>
+    <flip-clock display-mode="countdown" start-from="20" show-buttons hide-hours></flip-clock>
   </div>
 </body>
 </html>
