--- a/flip-clock.html
+++ b/flip-clock.html
@@ -12,8 +12,8 @@ A flip clock, timer and countdown made with Polymer
 
     <flip-clock display-mode="countdown" start-from="20" show-buttons></flip-clock>
 
+@demo
 @element flip-clock
-@blurb A flip clock, timer and countdown made with Polymer
 @homepage http://Granze.github.io/flip-clock
 @author Maurizio Mangione
 
