Fix countdown for startFrom < 10
Quick&dirty padding implementation taken from:
http://stackoverflow.com/questions/10073699/pad-a-number-with-leading-zeros-in-javascript#comment43818360_10073699

--- a/flip-clock.html
+++ b/flip-clock.html
@@ -260,7 +260,7 @@ A flip clock, timer and countdown made with Polymer
           this._createClock();
       }
       if(this.startFrom) {
-        this.time = '00' + this.startFrom + '00';
+        this.time = '00' + ('00' + this.startFrom).slice(-2) + '00';
       }
     }
   });
