--- a/test/flip-clock-test.html
+++ b/test/flip-clock-test.html
@@ -66,7 +66,7 @@
             done();
           });
           MockInteractions.tap(startBtn);
-          expect(startBtn.hasAttribute('disable')).to.be.equal(true);
+          expect(startBtn.hasAttribute('disabled')).to.be.equal(true);
         });
       });
 
