--- a/flip-clock.html
+++ b/flip-clock.html
@@ -1,5 +1,5 @@
 <link rel="import" href="../polymer/polymer.html">
-<script src="../moment/moment.js"></script>
+<link rel="import" href="moment-import.html">
 
 <!--
 A flip clock, timer and countdown made with Polymer
