initialize isRunning property

--- a/flip-clock.html
+++ b/flip-clock.html
@@ -103,6 +103,12 @@ A flip clock, timer and countdown made with Polymer
      * @default null
      */
     timer: null,
+    /***
+     * @private
+     * @type Boolean
+     * @default false
+     */
+    isRunning: false,
 
     properties: {
       /**
