--- a/flip-clock.html
+++ b/flip-clock.html
@@ -27,17 +27,13 @@ A flip clock, timer and countdown made with Polymer
     #clock {
       font-family: Arial, Verdana, sans-serif;
       font-weight: bold;
-      font-size: var(--digits-size, 70px);
+      font-size: var(--digits-size, 10px);
     }
     #clock .num {
       position: relative;
       display: inline-block;
       margin-right: 10px;
-      padding: 5px 15px;
-      border-radius: 4px;
-      color: var(--digits-color, #fff);
-      box-shadow: var(--box-shadow, 1px 1px 1px #555);
-      background-color: var(--bg-color, #333);
+      color: var(--digits-color, #333);
     }
     #clock .num:after {
       content: '';
@@ -46,7 +42,6 @@ A flip clock, timer and countdown made with Polymer
       top: 50%;
       width: 100%;
       height: 3px;
-      background-color: #111;
     }
     #clock b {
       color: #333;
