--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!doctype html>
 <html>
 <head>
-  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-  <script src="../webcomponentsjs/webcomponents-lite.min.js"></script>
-  <link rel="import" href="../polymer/polymer.html">
-  <link rel="import" href="../iron-component-page/iron-component-page.html">
-
+  <meta charset="utf-8">
+  <meta http-equiv="refresh" content="0;url=demo/" />
+  <title>flip-clock</title>
 </head>
 <body>
-
-  <iron-component-page></iron-component-page>
-
+<!--
+    ELEMENT API DOCUMENTATION SUPPORT COMING SOON
+    Visit demo/index.html to see live examples of your element running.
+    This page will automatically redirect you there when run in the browser
+    with `polymer serve`.
+  -->
 </body>
 </html>
