increase max-with to fit the element

--- a/demo/index.html
+++ b/demo/index.html
@@ -16,6 +16,11 @@
     <style is="custom-style" include="demo-pages-shared-styles">
     </style>
   </custom-style>
+  <style>
+    .centered {
+      max-width: 620px;
+    }
+  </style>
 </head>
 <body>
 <div class="vertical-section-container centered">
