--- a/demo/index.html
+++ b/demo/index.html
@@ -31,6 +31,7 @@
   <h3>Countdown flip-clock</h3>
   <flip-clock display-mode="countdown" start-from="20" show-buttons></flip-clock>
 
+  <p><a href="https://github.com/Granze/flip-clock/tree/v3">Show me the code!</a></p>
 
   <!--<demo-snippet>-->
     <!--<template>-->
